# habit-maker

./: .gitignore  LICENSE  README.md  SPEC.md  angular.json  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: analytics.rs  data.rs  grid.rs  habits.rs  mod.rs  wellness.rs
src-tauri/src/db/: migrations.rs  mod.rs  pool.rs
src-tauri/src/services/: analytics.rs  calendar.rs  data_mgmt.rs  entries.rs  habits.rs  mod.rs  wellness.rs
src/app/: app.component.ts  app.routes.ts
src/app/core/: models.ts  month.util.ts  tauri.service.ts
src/app/features/analytics/: analytics.component.ts
src/app/features/habits/: habits.component.ts
src/app/features/settings/: settings.component.ts
src/app/features/tracker/: tracker.component.ts
src/app/shared/: analysis-table.component.ts  donut.component.ts  month-selector.component.ts  progress-bars.component.ts  wellness-line.component.ts
src/styles/: styles.scss
